--- a/Python_01_Pythonプログラミングについて.ipynb
+++ b/Python_01_Pythonプログラミングについて.ipynb
@@ -72,6 +72,23 @@
       "source": [
         "print(\"Hello, world!\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "これで必ず変更になります！\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"これで必ず変更になります！\")"
+      ]
     }
   ],
   "metadata": {
@@ -79,11 +96,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
